# sample-databricks-project

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pipeline.yml  pull-request-check.yml  version-bump.yml
src/sample_databricks_project/: __init__.py
